Bug 261803 - url and regexp for automatic updates of investments at GPW needs to be updated
Summary: url and regexp for automatic updates of investments at GPW needs to be updated
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.98.x
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-01 19:03 UTC by Daniel [DC]
Modified: 2011-01-01 21:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel [DC] 2011-01-01 19:03:39 UTC
Version:           3.98.x
OS:                Linux

The online update of any investment held at "Gielda Papierow Wartosciowych (GPW)" failed each time. The reason is because the URL and the Regex for Price need to be updated.
The following values work fine:
URL: http://stooq.pl/q/?s=%1
Price: Kurs.*(\d+\.\d+).[zł]*Data
When the original URL of stooq.com is used the website responds in English and the word "Kurs" does not appear in the search results. Also [zł] (the second letter is a Polish character - crossed L) needs to be used as this symbol is used after prices for some investments (shares)

Reproducible: Always

Steps to Reproduce:
try to uppdate investments with the following codes:
AGO
LTS
ARKAFRN12
BPHFIZSN



OS: Linux (i686) release 2.6.35-24-generic
Compiler: cc

I noticed this problem in the KmyMoney 4 included in Ubuntu 10.10
Comment 1 Thomas Baumgart 2011-01-01 20:56:14 UTC
SVN commit 1210691 by tbaumgart:

Updated regexp to extract prices from "Gielda Papierow Wartosciowych"

BUG: 261803

 M  +1 -1      webpricequote.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210691
Comment 2 Thomas Baumgart 2011-01-01 21:03:17 UTC
SVN commit 1210693 by tbaumgart:

Updated regexp to extract prices from "Gielda Papierow Wartosciowych"

Backport to stable branch.

BUG: 261803

 M  +1 -1      webpricequote.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210693