Updated regexp to extract prices from "Gielda Papierow Wartosciowych"

BUG: 261803

svn path=/trunk/extragear/office/kmymoney/; revision=1210691